# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,10 @@
 import { Router, type IRouter } from "express";
-import healthRouter from "./health";
+import healthRouter from "./health.js";
+import blockchainRouter from "./blockchain.js";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(blockchainRouter);
 
 export default router;
